# hello-wasm

./: Cargo.toml  Makefile  index.html
pkg/: README.md  hello_wasm.js  hello_wasm_bg.wasm  package.json
