[package]
name = "hello-wasm"
authors = ["Nathan Henrie <nate@n8henrie.com>"]
version = "0.1.0"
edition = "2018"
description = "A sample project with wasm-pack"
license = "MIT"
repository = "https://github.com/n8henrie/hello-wasm"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"

# https://github.com/rustwasm/wasm-pack/issues/913
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
